@@ -107,6 +107,21 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|search
+operator|.
+name|Explanation
+operator|.
+name|IDFExplanation
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|util
 operator|.
 name|ArrayUtil
@@ -557,6 +572,12 @@ specifier|private
 name|float
 name|value
 decl_stmt|;
+DECL|field|idfExp
+specifier|private
+specifier|final
+name|IDFExplanation
+name|idfExp
+decl_stmt|;
 DECL|field|idf
 specifier|private
 name|float
@@ -592,13 +613,17 @@ name|getSimilarity
 argument_list|()
 expr_stmt|;
 comment|// compute idf
-specifier|final
-name|int
-name|maxDoc
+name|ArrayList
+argument_list|<
+name|Term
+argument_list|>
+name|allTerms
 init|=
-name|searcher
-operator|.
-name|maxDoc
+operator|new
+name|ArrayList
+argument_list|<
+name|Term
+argument_list|>
 argument_list|()
 decl_stmt|;
 for|for
@@ -619,26 +644,33 @@ range|:
 name|terms
 control|)
 block|{
-name|idf
-operator|+=
-name|this
+name|allTerms
 operator|.
-name|similarity
-operator|.
-name|idf
-argument_list|(
-name|searcher
-operator|.
-name|docFreq
+name|add
 argument_list|(
 name|term
-argument_list|)
-argument_list|,
-name|maxDoc
 argument_list|)
 expr_stmt|;
 block|}
 block|}
+name|idfExp
+operator|=
+name|similarity
+operator|.
+name|idfExplain
+argument_list|(
+name|allTerms
+argument_list|,
+name|searcher
+argument_list|)
+expr_stmt|;
+name|idf
+operator|=
+name|idfExp
+operator|.
+name|getIdf
+argument_list|()
+expr_stmt|;
 block|}
 annotation|@
 name|Override
@@ -1141,7 +1173,13 @@ name|idf
 argument_list|,
 literal|"idf("
 operator|+
-name|getQuery
+name|field
+operator|+
+literal|":"
+operator|+
+name|idfExp
+operator|.
+name|explain
 argument_list|()
 operator|+
 literal|")"
