@@ -87,6 +87,21 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|search
+operator|.
+name|Explanation
+operator|.
+name|IDFExplanation
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|store
 operator|.
 name|Directory
@@ -151,6 +166,15 @@ operator|.
 name|io
 operator|.
 name|IOException
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collection
 import|;
 end_import
 begin_import
@@ -1762,6 +1786,216 @@ name|MultiPhraseQuery
 argument_list|()
 operator|.
 name|toString
+argument_list|()
+expr_stmt|;
+block|}
+DECL|method|testCustomIDF
+specifier|public
+name|void
+name|testCustomIDF
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Directory
+name|indexStore
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|RandomIndexWriter
+name|writer
+init|=
+operator|new
+name|RandomIndexWriter
+argument_list|(
+name|random
+argument_list|,
+name|indexStore
+argument_list|)
+decl_stmt|;
+name|add
+argument_list|(
+literal|"This is a test"
+argument_list|,
+literal|"object"
+argument_list|,
+name|writer
+argument_list|)
+expr_stmt|;
+name|add
+argument_list|(
+literal|"a note"
+argument_list|,
+literal|"note"
+argument_list|,
+name|writer
+argument_list|)
+expr_stmt|;
+name|IndexReader
+name|reader
+init|=
+name|writer
+operator|.
+name|getReader
+argument_list|()
+decl_stmt|;
+name|IndexSearcher
+name|searcher
+init|=
+operator|new
+name|IndexSearcher
+argument_list|(
+name|reader
+argument_list|)
+decl_stmt|;
+name|searcher
+operator|.
+name|setSimilarity
+argument_list|(
+operator|new
+name|DefaultSimilarity
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|IDFExplanation
+name|idfExplain
+parameter_list|(
+name|Collection
+argument_list|<
+name|Term
+argument_list|>
+name|terms
+parameter_list|,
+name|IndexSearcher
+name|searcher
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+return|return
+operator|new
+name|IDFExplanation
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|float
+name|getIdf
+parameter_list|()
+block|{
+return|return
+literal|10f
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|String
+name|explain
+parameter_list|()
+block|{
+return|return
+literal|"just a test"
+return|;
+block|}
+block|}
+return|;
+block|}
+block|}
+argument_list|)
+expr_stmt|;
+name|MultiPhraseQuery
+name|query
+init|=
+operator|new
+name|MultiPhraseQuery
+argument_list|()
+decl_stmt|;
+name|query
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Term
+index|[]
+block|{
+operator|new
+name|Term
+argument_list|(
+literal|"body"
+argument_list|,
+literal|"this"
+argument_list|)
+block|,
+operator|new
+name|Term
+argument_list|(
+literal|"body"
+argument_list|,
+literal|"that"
+argument_list|)
+block|}
+argument_list|)
+expr_stmt|;
+name|query
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"body"
+argument_list|,
+literal|"is"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Weight
+name|weight
+init|=
+name|query
+operator|.
+name|createWeight
+argument_list|(
+name|searcher
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|10f
+operator|*
+literal|10f
+argument_list|,
+name|weight
+operator|.
+name|sumOfSquaredWeights
+argument_list|()
+argument_list|,
+literal|0.001f
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|searcher
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|reader
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|indexStore
+operator|.
+name|close
 argument_list|()
 expr_stmt|;
 block|}
